redis/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis
  namespace: redis
spec:
  tls:
  - hosts:
      - redis.lab.home
    secretName: redis-tls
  rules:
  - host: redis.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis
            port:
              number: 9090
